--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>blog for peter in tokyo</title>
   </head>
   <body>
-    
+    <!-- git-credential-osxkeychain error test -->
     <div id="root"></div>
     
   </body>
